2003-03-19  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (check_point): fix the point calculation for
	iframes.

2003-03-18  Larry Ewing  <lewing@ximian.com>

	* htmlprinter.c (draw_text): add return value.

	* htmlpainter.c: add missing include.

	* htmlimage.c (html_image_pointer_run_animation): remove unused
	variables.

	* htmlgdkpainter.c (draw_spell_error): remove unsued variable, add
	a return value.

	* htmltable.h (html_table_end_table): add prototype.

	* htmlengine-edit-tablecell.c: remove debug printfs
	(move_cell_rd_undo_free): add a return type.

	* gtkhtml-properties.c (gtk_html_class_properties_new): warning
	cleanups.

	* htmlclueflow.c (calc_size): warning cleanups.

2003-03-18  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (realize): call gtk_im_context_set_client_window
	(unrealize): ditto
	(gtk_html_init): connect new im callbacks

	* Makefile.am: removed gtkhtml-im.[ch]

	* gtkhtml.c (key_press_event): use im context
	(key_release_event): handle this event
	(focus_in_event): use im context
	(focus_out_event): ditto

2003-03-17  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (html_clueflow_get_line_offset): pass line_offset
	to html_text_text_line_length

	* htmltextslave.c (html_get_glyphs_non_tab): make this function
	public

	* htmlgdkpainter.c
	(html_gdk_painter_text_itemize_and_prepare_glyphs): don't count
	tab width

2003-03-14  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (draw_spell_error): use shift_items

	* htmlplainpainter.c (draw_text): use shift_items

2003-03-13  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (check_point): remove incorrect addition of margins
	in point calculation.

2003-03-12  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_text_line_length): fix line_offset
	calculation

	* htmltextslave.c (html_text_slave_get_line_offset): removed
	line_offset parameter, updated all callers

	* htmlclueflow.c (html_clueflow_get_line_offset): don't allow head
	to be set to NULL
